--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,18 @@
 * {
     margin: 0;
     padding: 0;
-    background-color: #555;
     font-family: Calibri;
     color: #fff;
+}
+
+html { 
+    background: #CD4343;
+    box-shadow: inset 0px 0px 102px 27px rgba(55, 17, 17, 0.75);
+}
+
+@font-face {
+    font-family: Inter;
+    src: url('../production/fonts/Inter/Inter-VariableFont_slnt\,wght.ttf');
 }
 
 :root {
@@ -13,4 +22,152 @@
 .container {
     width: 100%;
     min-height: 100vh;
+}
+
+.title {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    height: 15vh;
+}
+
+.title * {
+    font-size: 6.5rem;
+    font-family: Inter;
+    color: #122E40;
+    text-shadow: 0 0 3px #245C80,
+        0 0 3px #245C80,
+        0 0 3px #245C80,
+        0 0 3px #245C80,
+        0 0 3px #245C80,
+        0 0 3px #245C80,
+        0 0 3px #245C80,
+        0 0 4px #245C80,
+        0 0 4px #245C80,
+        0 0 4px #245C80,
+        0 0 4px #245C80,
+        0 0 4px #245C80,
+        0 0 4px #245C80,
+        -12px -6px 17px rgba(0, 0, 0, 0.4);
+    font-weight: 900;
+    margin: 1rem;
+    translate: 0 -150%;
+}
+
+.title-1 {
+    animation: title-slide-in 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0s 1 forwards;
+}
+
+.title-2 {
+    animation: title-slide-in 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s 1 forwards;
+}
+
+.title-3 {
+    animation: title-slide-in 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 1s 1 forwards;
+}
+
+@keyframes title-slide-in {
+    0% {
+        translate: -35% -150%;
+    }
+    100% {
+        translate: 0 0;
+    }
+}
+
+.itemsWrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 60vh;
+}
+
+.item {
+    flex-basis: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 65%;
+    filter: drop-shadow(0 0 5px #0007);
+    transition: translate 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
+    left: -100%;
+    position: relative;
+}
+
+.item:nth-child(1) {
+    animation: itemSlideIn 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0s 1 forwards;
+}
+
+.item:nth-child(2) {
+    animation: itemSlideIn 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s 1 forwards;
+}
+
+.item:nth-child(3) {
+    animation: itemSlideIn 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 1s 1 forwards;
+}
+
+@keyframes itemSlideIn {
+    0% {
+        left: -100%;
+    }
+    100% {
+        left: 0;
+    }
+}
+
+.item.chosen {
+    filter: drop-shadow(0 0 5px #000f) drop-shadow(-15px -15px 5px #0005);
+    scale: 1.1;
+    translate: 0 -3%;
+}
+
+.item.chosen:hover {
+    translate: 0 -6%;
+}
+
+.item:hover {
+    translate: 0 -3%;
+}
+
+.item img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.shoot {
+    height: 25vh;
+    background-color: #122E40;
+    border-top: #245C80 6px solid;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.shootBtn {
+    background-color: transparent;
+    border: transparent;
+    outline: none;
+    font-size: 4rem;
+    font-weight: 800;
+    font-family: Inter;
+    color: #AFCDE0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+
+.scoreWrapper {
+    position: absolute;
+    top: 0;
+    translate: 0 -100%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
+    font-size: 2.5rem;
+    font-weight: 900;
+    font-family: Inter;
+    box-sizing: border-box;
 }
