--- a/styles/main.css
+++ b/styles/main.css
@@ -8,6 +8,7 @@
 html { 
     background: #CD4343;
     box-shadow: inset 0px 0px 102px 27px rgba(55, 17, 17, 0.75);
+    overflow: hidden;
 }
 
 @font-face {
@@ -30,6 +31,7 @@ html {
     align-items: center;
     justify-content: center;
     height: 15vh;
+    z-index: 100;
 }
 
 .title * {
@@ -79,31 +81,38 @@ html {
 .itemsWrapper {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
     height: 60vh;
+    position: relative;
 }
 
 .item {
-    flex-basis: 25%;
+    width: 25%;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 65%;
     filter: drop-shadow(0 0 5px #0007);
-    transition: translate 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
+    transition: all 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
+    position: absolute;
+    translate: -50% -50%;
     left: -100%;
-    position: relative;
+    top: 50%;
+    z-index: 50;
 }
 
 .item:nth-child(1) {
+    --left: 25%;
     animation: itemSlideIn 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0s 1 forwards;
 }
 
 .item:nth-child(2) {
+    --left: 50%;
     animation: itemSlideIn 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s 1 forwards;
 }
 
 .item:nth-child(3) {
+    --left: 75%;
     animation: itemSlideIn 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 1s 1 forwards;
 }
 
@@ -112,22 +121,22 @@ html {
         left: -100%;
     }
     100% {
-        left: 0;
+        left: var(--left);
     }
 }
 
 .item.chosen {
     filter: drop-shadow(0 0 5px #000f) drop-shadow(-15px -15px 5px #0005);
-    scale: 1.1;
-    translate: 0 -3%;
+    scale: 1.05;
+    translate: -50% calc(-50% + -16px);
 }
 
 .item.chosen:hover {
-    translate: 0 -6%;
+    translate: -50% calc(-50% + -32px);
 }
 
 .item:hover {
-    translate: 0 -3%;
+    translate: -50% calc(-50% + -16px);
 }
 
 .item img {
