--- a/styles/main.css
+++ b/styles/main.css
@@ -96,24 +96,44 @@ html {
     transition: all 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
     position: absolute;
     translate: -50% -50%;
-    left: -100%;
+    left: var(--left);
     top: 50%;
     z-index: 50;
+    /* animation: name duration timing-function delay iteration-count direction fill-mode; */
+}
+
+.item.default {
+    opacity: 0;
 }
 
 .item:nth-child(1) {
     --left: 25%;
-    animation: itemSlideIn 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0s 1 forwards;
+    animation: itemSlideIn 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0s 1,
+    appearInstantly 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0s 1 forwards;
 }
 
 .item:nth-child(2) {
     --left: 50%;
-    animation: itemSlideIn 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s 1 forwards;
+    animation: itemSlideIn 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s 1,
+    appearInstantly 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s 1 forwards;
 }
 
 .item:nth-child(3) {
     --left: 75%;
-    animation: itemSlideIn 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 1s 1 forwards;
+    animation: itemSlideIn 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 1s 1,
+    appearInstantly 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 1s 1 forwards;
+}
+
+@keyframes appearInstantly {
+    0% {
+        opacity: 0;
+    }
+    1% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 @keyframes itemSlideIn {
@@ -126,7 +146,7 @@ html {
 }
 
 .item.chosen {
-    filter: drop-shadow(0 0 5px #000f) drop-shadow(-15px -15px 5px #0005);
+    /* filter: drop-shadow(0 0 5px #000f) drop-shadow(-15px -15px 5px #0005); */
     scale: 1.05;
     translate: -50% calc(-50% + -16px);
 }
@@ -167,7 +187,7 @@ html {
     cursor: pointer;
 }
 
-.scoreWrapper {
+.scoreWrapper, .incrementWrapper {
     position: absolute;
     top: 0;
     translate: 0 -100%;
@@ -179,4 +199,124 @@ html {
     font-weight: 900;
     font-family: Inter;
     box-sizing: border-box;
+}
+
+.pointIncrement {
+    color: #43CC6A;
+    font-family: Inter;
+    font-weight: 900;
+    font-size: 1.5rem;
+}
+
+.incrementWrapper {
+    translate: 0 calc(-100% - 2.5rem);
+}
+
+.incrementWrapper * {
+    /* opacity: 0; */
+    transition: 0 0;
+    opacity: 0;
+}
+
+.incrementWrapper *.animating {
+    transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+@keyframes fade-up {
+    0% {
+        translate: 0 0;
+        opacity: 1;
+    }
+    90% {
+        opacity: 0;
+    }
+    100% {
+        translate: 0 -100%;
+    }
+}
+
+.winScreen {
+    position: absolute;
+    left: 50%;
+    width: 40%;
+    height: 50vh;
+    translate: -50% 0;
+    background-color: #122E40;
+    border-top: 6px solid #245C80;
+    border-left: 6px solid #245C80;
+    border-right: 6px solid #245C80;
+    z-index: 90;
+    grid-template-rows: repeat(3, 1fr);
+    border-radius: 10px 10px 0 0;
+    display: grid;
+    bottom: -100%;
+    transition: bottom 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.winScreen.active {
+    bottom: 25vh;
+}
+
+.youWin {
+    font-size: 4rem;
+    font-family: Inter;
+    font-weight: 900;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+}
+
+.score {
+    font-size: 3.5rem;
+    font-weight: 900;
+    font-family: Inter;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.winButtonWrapper {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.winButtonWrapper button {
+    aspect-ratio: 2 / 1;
+    width: 25%;
+    background-color: #19608C;
+    border: #245C80;
+    border-radius: 6px;
+    font-family: Inter;
+    font-weight: 700;
+    font-size: 1.75rem;
+    cursor: pointer;
+}
+
+.winButtonWrapper button:hover {
+    filter: brightness(1.1);
+}
+
+.sweepScreen {
+    width: 100vw;
+    height: 100vh;
+    background-color: #CD4343;
+    position: absolute;
+    left: 100%;
+    top: 0;
+    transition: left 500ms ease-in;
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-family: Inter;
+    font-size: 8rem;
+    font-weight: 900;
+}
+
+.sweepScreen.sweep {
+    left: 0%;
 }
