--- a/styles/main.css
+++ b/styles/main.css
@@ -200,6 +200,9 @@ html {
     font-weight: 900;
     font-family: Inter;
     box-sizing: border-box;
+    z-index: 80;
+    user-select: none;
+    pointer-events: none;
 }
 
 .pointIncrement {
