--- a/styles/main.css
+++ b/styles/main.css
@@ -25,13 +25,66 @@ html {
     min-height: 100vh;
 }
 
+.startScreen {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #CD4343;
+    z-index: 10000;
+    transition: left 1250ms cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.startScreen.slideOut {
+    left: 100%;
+}
+
+.startButton {
+    background-color: #122E40;
+    border: 6px solid #19608C;
+    border-radius: 6px;
+    box-shadow: 0 0 4px 4px #19608C;
+    width: 25%;
+    position: absolute;
+    left: 50%;
+    cursor: pointer;
+    top: 50%;
+    translate: -50% -50%;
+    aspect-ratio: 3 / 1;
+    font-size: 3rem;
+    font-family: Inter;
+    font-weight: 900;
+    scale: 0;
+    animation: startButtonScale 750ms 1 forwards,
+    startButtonScaleConstant 2s 750ms linear infinite alternate-reverse;
+}
+
+@keyframes startButtonScale {
+    0% {
+        scale: 0;
+    }
+    100% {
+        scale: 1;
+    }
+}
+
+@keyframes startButtonScaleConstant {
+    0% {
+        scale: 1.05;
+    }
+    100% {
+        scale: 1;
+    }
+}
+
 .title {
     display: flex;
     width: 100%;
     align-items: center;
     justify-content: center;
     height: 15vh;
-    z-index: 100;
+    z-index: 40;
 }
 
 .title * {
@@ -99,26 +152,26 @@ html {
     translate: -50% -50%;
     left: var(--left);
     top: 50%;
-    z-index: 50;
+    z-index: 20;
 }
 
 .item.default {
     opacity: 0;
 }
 
-.item:nth-child(1) {
+.item.activate:nth-child(1) {
     --left: 25%;
     animation: itemSlideIn 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0s 1,
     appearInstantly 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0s 1 forwards;
 }
 
-.item:nth-child(2) {
+.item.activate:nth-child(2) {
     --left: 50%;
     animation: itemSlideIn 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s 1,
     appearInstantly 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s 1 forwards;
 }
 
-.item:nth-child(3) {
+.item.activate:nth-child(3) {
     --left: 75%;
     animation: itemSlideIn 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 1s 1,
     appearInstantly 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 1s 1 forwards;
@@ -172,7 +225,7 @@ html {
     justify-content: center;
     align-items: center;
     position: relative;
-    z-index: 100;
+    z-index: 40;
 }
 
 .shootBtn {
@@ -200,7 +253,7 @@ html {
     font-weight: 900;
     font-family: Inter;
     box-sizing: border-box;
-    z-index: 80;
+    z-index: 30;
     user-select: none;
     pointer-events: none;
 }
@@ -249,7 +302,7 @@ html {
     border-top: 6px solid #245C80;
     border-left: 6px solid #245C80;
     border-right: 6px solid #245C80;
-    z-index: 90;
+    z-index: 30;
     grid-template-rows: repeat(3, 1fr);
     border-radius: 10px 10px 0 0;
     display: grid;
@@ -333,6 +386,10 @@ html {
 }
 
 @media screen and (width <= 1100px) {
+    .startButton {
+        width: 60%;
+    }
+
     .title * {
         font-size: 4.5rem;
     }
@@ -342,6 +399,7 @@ html {
         font-size: 1.5rem;
     }    
 }
+
 
 @media screen and (width <= 800px) {
     .title * {
@@ -366,6 +424,10 @@ html {
 }
 
 @media screen and (width <= 650px) {
+    .startButton {
+        font-size: 2rem;
+    }
+
     .title * {
         font-size: 3rem;
     }
