--- a/styles/main.css
+++ b/styles/main.css
@@ -310,6 +310,20 @@ html {
     transition: bottom 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
+.winScreen::after {
+    display: block;
+    width: 100%;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    height: 100vh;
+    content: '';
+
+    background-color: #122E40;
+    border-left: 6px solid #245C80;
+    border-right: 6px solid #245C80;
+}
+
 .winScreen.active {
     bottom: 25vh;
 }
