--- a/styles/main.css
+++ b/styles/main.css
@@ -308,23 +308,6 @@ html {
     display: grid;
     bottom: -100%;
     transition: bottom 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
-    box-sizing: border-box;
-}
-
-.winScreen::after {
-    display: block;
-    width: 100%;
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    translate: -50%;
-    height: 100vh;
-    content: '';
-    box-sizing: content-box;
-
-    background-color: #122E40;
-    border-left: 6px solid #245C80;
-    border-right: 6px solid #245C80;
 }
 
 .winScreen.active {
@@ -411,11 +394,7 @@ html {
 }
 
 @media screen and (width <= 1300px) {   
-    .item.paper img {
-        max-height: 80%;
-    }
-
-    .item.paper img {
+    .item[src*="Paper"] img {
         max-height: 60%;
     }
 }
@@ -452,7 +431,7 @@ html {
         --left: 80%;
     }
 
-    .item.paper img {
+    .item[src*="Paper"] img {
         max-height: 50%;
     }
 }
@@ -489,7 +468,7 @@ html {
         font-size: 1rem;
     }
 
-    .item.paper img {
+    .item[src*="Paper"] img {
         max-height: 30%;
     }
 }
